# IUCr-annotation-pipeline

./: .gitignore  pyproject.toml  requirements.txt
examples/: d-71-02386.xml  readme.txt
examples/SIFTS_XML/: 4zl7.xml  4zl8.xml  4zl9.xml
examples/validation_XML/: 4zl7_validation.xml  4zl8_validation.xml  4zl9_validation.xml
pipeline/: utils.py
pipeline/grounding/: grounding.py  grounding_tools.py  run_validation_grounding.py  validation_tools.py
pipeline/jupyter_notebooks/: PDBe_API_for_text_mined_annotations.ipynb
pipeline/predicting/: inference_tools.py  run_local_inference_for_ner.py
