[project]
name = "iucr_annotation_pipeline"
version = "0.0.1"
description = "A Python-based pipeline to wrap around a transformer model to annotated IUCr-style JATS XML for functional protein residues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "dataset>=2.0.0",
    "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.3/en_core_sci_sm-0.5.3.tar.gz#sha256=20f740772479f3ec6c2a3a5b832a096400a821e2aba68a797c4ba54c224331ed",
    "lxml>=6.1.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "optimum>=2.2.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "solrq>=1.1.2",
    "spacy>=3.6.1",
    "thinc>=8.1.12",
    "tokenizers>=0.22.2",
    "transformers>=5.12.1",
    "typer>=0.9.4",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "flake8>=7.3.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
]

[project.scripts]
pipeline_predict = "pipeline.predicting.run_local_inference_for_ner:main"
