[project]
name = "iucr_annotation_pipeline"
version = "0.0.1"
description = "A Python-based pipeline to wrap around a transformer model to annotated IUCr-style JATS XML for functional protein residues"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "bs4",
    "datasets",
    "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz#sha256=20f740772479f3ec6c2a3a5b832a096400a821e2aba68a797c4ba54c224331ed",
    "lxml",
    "nltk",
    "numpy",
    "onnx==1.22.0",
    "onnxruntime==1.27.0",
    "optimum==2.2.0",
    "pandas",
    "pre-commit",
    "requests",
    "solrq",
    "spacy",
    "thinc",
    "tokenizers>=0.22.0",
    "transformers==5.0.0",
    "typer",
    "urllib3",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "flake8>=7.3.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
]

[project.scripts]
pipeline_predict = "pipeline.predicting.run_local_inference_for_ner:main"
pipeline_validate = "pipeline.grounding.run_validation_grounding:main"
